instructions.Instructions.scala.code
baissebrosse()
droite()
droite()

recule()
recule()

gauche()
gauche()

avance()
levebrosse()
droite()